<resources>
    <string name="app_name">CalcuDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_message">Calculation Test</string>
    <string name="title_image_desc" translatable="false">Title image</string>
    <string name="title_button">Start</string>
    <string name="best_scope_message">The Highest Score:%d</string>
    <string name="button0" translatable="false">0</string>
    <string name="button1" translatable="false">1</string>
    <string name="button2" translatable="false">2</string>
    <string name="button3" translatable="false">3</string>
    <string name="button4" translatable="false">4</string>
    <string name="button5" translatable="false">5</string>
    <string name="button6" translatable="false">6</string>
    <string name="button7" translatable="false">7</string>
    <string name="button8" translatable="false">8</string>
    <string name="button9" translatable="false">9</string>
    <string name="buttonClear">CLEAR</string>
    <string name="buttonSubmit">OK</string>
    <string name="equals_sign" translatable="false">=</string>
    <string name="quest_sign" translatable="false">\?</string>
    <string name="current_scope">Scope:%d</string>
    <string name="user_answer">Your Answer:</string>
    <string name="win_image_info">WIN!</string>
    <string name="lose_image_info">LOSE!</string>
    <string name="win_message">You Win!</string>
    <string name="lose_message">Your Lose!</string>
    <string name="win_scope_message">New Scope:%d</string>
    <string name="lose_scope_message">Your Scope:%d</string>
    <string name="result_button_message">Back</string>
    <string name="dialog_title_info">Are You Sure to Quit?</string>
    <string name="dialog_submit">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="nav_title_welcome">Welcome</string>
    <string name="nav_title_Testing">Testing</string>
    <string name="nav_title_Win">Win</string>
    <string name="nav_title_Lose">Lose</string>
</resources>