<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    android:label="@string/nav_title_welcome"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/loseFragment"
        android:name="com.wang.calcudemo.LoseFragment"
        android:label="@string/nav_title_Lose"
        tools:layout="@layout/fragment_lose">
        <action
            android:id="@+id/action_loseFragment_to_titleFragment"
            app:destination="@id/titleFragment"
            app:popUpTo="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/titleFragment"
        android:name="com.wang.calcudemo.TitleFragment"
        android:label="@string/nav_title_welcome"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_questionFragment"
            app:destination="@id/questionFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.wang.calcudemo.QuestionFragment"
        android:label="@string/nav_title_Testing"
        tools:layout="@layout/fragment_question">
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="com.wang.calcudemo.WinFragment"
        android:label="@string/nav_title_Win"
        tools:layout="@layout/fragment_win">
        <action
            android:id="@+id/action_winFragment_to_titleFragment"
            app:destination="@id/titleFragment"
            app:popUpTo="@id/titleFragment" />
    </fragment>
</navigation>